JSAI/error/src/test/resources/base/ke002.js
var X = function(){};
X.a = 1;
print(X.a);
